# astroturf

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  _diff_clustering.txt  _diff_silver.txt  main.py  pyproject.toml
.github/workflows/: warm-warehouse.yml
agents/attribution/: agent.py
agents/clustering/: agent.py
agents/downloader/: agent.py
agents/embedding/: agent.py
agents/ingestion/: agent.py
agents/migration/: agent.py
agents/parser/: agent.py
artifacts/benchmark/: benchmark_metrics.json  benchmark_report.md
configs/: discovery_sources.yaml  dockets.yaml
debug_ui/: app.py
docs/: README.md  architecture.md  attachment-extraction-plan.md  attachments.md  attribution-and-migration-methodology.md  databricks-integration.md  databricks-production-setup.md  databricks-uc-promotion.md  databricks-vector-search.md  databricks-workflow.md  demo-case-study.md  demo-story.md  deployment-production.md  discovery-and-watchlist-methodology.md  ecfs-setup.md  end-to-end-pipeline-runbook.md  evidence-checklist.md  ingestion.md  live-databricks-validation.md  parser.md  product-vision.md  readme-improvement-plan.md  repository-polish-audit.md  reviewer-walkthrough.md  system-map.md  test-dockets.md  ui-information-architecture.md
orchestrator/: local.py
scripts/: backfill_source_field.py  benchmark_ingestion.py  check_bfa_template.py  check_databricks_ready.py  classify_dockets.py  diagnose_delta_paths.py  discover_dockets.py  download_attachments.py  evaluate_demo_quality.py  export_cluster_evidence.py  export_cluster_review_dataset.py  export_demo_evidence.py  export_to_demo_table.py  generate_receipts.py  ingest_benchmark_sample.py  inspect_docket.py  manage_vector_index.py  promote_sample_to_parquet.py  run_attribution.py  run_autopilot.py  run_benchmark.py  run_clustering.py  run_docket_pipeline.py  run_embedding.py  run_exact_hash_baseline.py  run_ingestion.py  run_migration.py  run_parser.py  smoke_web_analysis_job.py  validate_discoveries.py  web_analysis_job_support.py
shared/: api_keys.py
ui/: next.config.ts  package-lock.json  package.json
ui/app/: page.tsx  (+3 more)
(+237 files in other folders)
