[project]
name = "astroturf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.104.0",
    "beautifulsoup4>=4.14.3",
    "databricks-connect>=16.1.7",
    "databricks-sdk>=0.110.0",
    "databricks-sql-connector>=4.2.6",
    "databricks-vectorsearch>=0.68",
    "datasketch>=1.10.0",
    "delta-spark>=4.2.0",
    "deltalake>=0.20",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "mlflow>=3.12.0",
    "numpy>=1.26.4",
    "openai>=2.38.0",
    "pandas>=2.3.3",
    "pyarrow>=15",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pypdf>=6.12.0",
    "pyspark>=4.1.1",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.5.1",
    "streamlit>=1.57.0",
    "tenacity>=9.1.4",
    "uvicorn>=0.47.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.14",
]

[tool.ruff]
line-length = 88
target-version = "py311"
builtins = ["spark", "dbutils", "display"]

[tool.ruff.lint]

[tool.ruff.lint.per-file-ignores]
"notebooks/databricks/*" = ["E402"]


